Adding head and body

--- a/index.html
+++ b/index.html
@@ -5,13 +5,39 @@
         <title> Timandra Draper | My Portfolio</title>
 
         <style>
-            body { 
-                font-family: Arial, sans-serif;
+            body {
                 margin: 0;
-                padding: 0;
-                line-height: 1.6;
+                font-family: 'Courier New', monospace;
+                background-color: #0a0f1c; /* deep dark navy */
+                color: #e0e0e0;
+            }
+
+            header {
+                text-align: center;
+                padding: 4rem 1rem;
+                background: linear-gradient(135deg, #0a0f1c, #1a1f3c);
+                border-bottom: 2px solid #08f7fe; /* neon cyan */
+                box-shadow: 0 0 20px #08f7fe33;
+            }
+
+            header h1 {
+                font-size: 3rem;
+                color: #ff2a6d; /* neon pink */
+                text-shadow: 0 0 10px #ff2a6d, 0 0 20px #ff2a6d;
+            }
+
+            header p {
+                font-size: 1.2rem;
+                margin-top: 1rem;
+                color: #08f7fe; /* neon cyan */
+                text-shadow: 0 0 5px #08f7fe;
             }
         </style>
     </head>
+
+    <body>
+        <h1>Timandra Draper</h1>
+        <p>Welcome to my portfolio</p>
+    </body>
 
 </html>
