--- a/index.html
+++ b/index.html
@@ -1,43 +1,61 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Timandra Draper | My Portfolio</title>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<title>Timandra Draper | My Portfolio</title>
+<style>
+  body{
+    margin:0; font-family:'Courier New', monospace;
+    background:#0a0f1c; color:#e0e0e0;
+    display:flex; align-items:center; justify-content:center; min-height:100vh;
+  }
+  .wrap{ text-align:center }
 
-        <style>
-            body {
-                margin: 0;
-                font-family: 'Courier New', monospace;
-                background-color: #0a0f1c; /* deep dark navy */
-                color: #e0e0e0;
-            }
+  /* neon looks */
+  .neon-pink{ color:#ff2a6d; text-shadow:0 0 10px #ff2a6d, 0 0 20px #ff2a6d; }
+  .neon-orange{ color:#ff6b35; text-shadow:0 0 8px #ff6b35, 0 0 18px #ff6b35, 0 0 32px #ff6b35; }
 
-            header {
-                text-align: center;
-                padding: 4rem 1rem;
-                background: linear-gradient(135deg, #0a0f1c, #1a1f3c);
-                border-bottom: 2px solid #08f7fe; /* neon cyan */
-                box-shadow: 0 0 20px #08f7fe33;
-            }
+  /* typewriter base — cursor follows text color */
+  .typewriter{
+    display:inline-block;
+    white-space:nowrap; overflow:hidden; width:0;
+    border-right:3px solid currentColor; /* caret uses the element's color */
+  }
 
-            header h1 {
-                font-size: 3rem;
-                color: #ff2a6d; /* neon pink */
-                text-shadow: 0 0 10px #ff2a6d, 0 0 20px #ff2a6d;
-            }
+  /* sizes + target widths (adjust ch if text clips) */
+  .line1{ font-size:3.2rem; --tw: 22ch; }
+  .line2{ font-size:1.6rem; --tw: 28ch; margin-top:.7rem; }
 
-            header p {
-                font-size: 1.2rem;
-                margin-top: 1rem;
-                color: #08f7fe; /* neon cyan */
-                text-shadow: 0 0 5px #08f7fe;
-            }
-        </style>
-    </head>
+  /* keyframes */
+  @keyframes typing   { from{width:0} to{width:var(--tw)} }
+  @keyframes blink    { 50%{ border-right-color:transparent } }
+  @keyframes cursorOff{ to  { border-right-color:transparent } }
+  @keyframes cursorOn { to  { border-right-color:currentColor } }
 
-    <body>
-        <h1>Timandra Draper</h1>
-        <p>Welcome to my portfolio</p>
-    </body>
+  /* Line 1: type, blink a few times, then turn cursor off */
+  .line1{
+    animation:
+      typing    2s   steps(30,end) forwards,
+      blink     0.8s step-end       2s 3,         /* 3 blinks = 2.4s of blinking */
+      cursorOff 0.01s linear        4.1s forwards;/* turn off just before line2 starts */
+  }
 
+  /* Line 2: start soon after line 1; blink some, then turn off */
+  .line2{
+    border-right-color:transparent;               /* hide caret until start */
+    animation:
+      typing    2.4s steps(30,end)   4.2s forwards,  /* begins 0.1s after line1 off */
+      cursorOn  0.01s linear         4.2s forwards,  /* show caret at start */
+      blink     0.8s step-end        6.6s 6,         /* 6 blinks after typing */
+      cursorOff 0.01s linear        11.4s forwards;  /* 6.6 + (6×0.8) */
+  }
+</style>
+</head>
+<body>
+  <div class="wrap">
+    <span class="typewriter line1 neon-pink">Hello, I'm Timandra.</span><br>
+    <span class="typewriter line2 neon-orange">I'm a full stack developer.</span>
+  </div>
+</body>
 </html>
